# press

./: .coveragerc  .cspell.json  .editorconfig  .git-blame-ignore-revs  .gitignore  .mergify.yml  .pre-commit-config.yaml  .prettierrc.json  .releaserc.js  .secrets.baseline  .semgrepignore  .travis.yml  404.html  AGENTS.md  API_DOCS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  README.md  SWAGGER.md  SWAGGER_APIS.json  biome.json  codecov.yml  commit-guidelines.md  commitlint.config.js  common_site_config.json  dev-requirements.txt  guide-to-testing.md  guide-to-ui-testing.md  hashmap.json  index.html  license.txt  mypy.ini  nginx.conf  package-lock.json  package.json  press-semgrep-rules.yml  pyproject.toml  requirements.txt  ruff.toml  (+9 more)
.github/: pull.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/helper/: install.sh
.github/helpers/: install.sh
.github/hooks/: todo-warning.sh
.github/workflows/: auto-backport-master-to-develop.yml  docker.yml  docs.yml  formatting.yml  initiate_release.yml  main.yaml  on_release.yml  release_notes.yml  semantic_release.yml  validate-pr-title.yaml
.travis/: mariadb.json
architecture/: index.html
arm-builds/: RedisearchARMBuild
assets/: app.Bc88eST8.js  app.D6VUsPza.js  app.DC5X0dAE.js  architecture_index.md.BPR1-bXq.js  architecture_index.md.C-PHeywX.lean.js  architecture_index.md.CAGR-uh1.js  code_agent_update_index.md.Db3LH_pr.js  code_agent_update_index.md.Db3LH_pr.lean.js  code_guards_index.md.Bk7D7OTR.js  code_guards_index.md.Bk7D7OTR.lean.js  code_guards_index.md.D3AiuHhp.js  code_guards_index.md.D3AiuHhp.lean.js  code_guards_mfa.md.BhsLY7Jr.js  code_guards_mfa.md.BhsLY7Jr.lean.js  code_guards_mfa.md.DQafetMY.js  code_guards_mfa.md.DQafetMY.lean.js  code_guards_role-guard.md.CKyQbji7.js  code_guards_role-guard.md.CKyQbji7.lean.js  code_guards_role-guard.md.CO8RYumN.js  code_guards_role-guard.md.CO8RYumN.lean.js  code_guards_role-guard.md.Clk4aj-i.js  code_guards_role-guard.md.Clk4aj-i.lean.js  code_guards_role-guard.md.DImOBUtt.js  code_guards_role-guard.md.DImOBUtt.lean.js  code_guards_role-guard.md.D_ZoC09X.js  code_guards_role-guard.md.D_ZoC09X.lean.js  code_guards_role-guard.md.gXkFLipi.js  code_guards_role-guard.md.gXkFLipi.lean.js  code_guards_settings.md.BQrlRITq.js  code_guards_settings.md.BQrlRITq.lean.js  code_guards_settings.md.SHZz9zLm.js  code_guards_settings.md.SHZz9zLm.lean.js  code_guards_site.md.D8DTO2G-.js  code_guards_site.md.D8DTO2G-.lean.js  code_guards_site.md.Dp46uYPs.js  code_guards_site.md.Dp46uYPs.lean.js  code_guards_team-guard.md.BtWfVsUO.js  code_guards_team-guard.md.BtWfVsUO.lean.js  code_guards_team-guard.md.DNFVsVYp.js  code_guards_team-guard.md.DNFVsVYp.lean.js  (+29 more)
assets/chunks/: framework.CWenapAC.js  framework.lvpqbiZd.js  framework.n2JA0TEf.js  theme.CydG8NF5.js  theme.DUAZNVY7.js  theme.XDTko8SE.js
backbone/: README.md  Vagrantfile  __init__.py  cli.py  hypervisor.py  setup.py  setup_mac.py
backbone/packer/: backbone.json  cloud-init-scaleway.yml  cloud-init.yml  scaleway.json
backbone/tests/: __init__.py  test_hypervisor.py
backbone/vagrant/: Vagrantfile
blog/: prebuild.sh
changelog/: .gitignore  astro.config.mjs  package.json  tsconfig.json
changelog/src/: consts.ts  content.config.ts  utils.js  utils.ts
code/: index.html
code/guards/: index.html  mfa.html  role-guard.html  settings.html  site.html  team-guard.html
code/testing/: best-practices.html  index.html  mocking.html
code/webhook/: index.html
dashboard/: .eslintrc.js  .gitignore  .prettierrc.json  README.md  auto-imports.d.ts  babel.config.js  components.d.ts  dashboard2.html  generateThemeConfig.cjs  generateThemeConfig.js  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.ts  postcss.config.js  proxyOptions.js  replace.cjs  setupci.sh  shims-global.d.ts  shims.d.ts  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vue.config.js
dashboard/patches/: frappe-ui+0.1.238.patch
dashboard/public/: index.html
dashboard/src/: App.vue  call.js  globals.js  globals.ts  main.js  plugins.js  registerServiceWorker.js  router.js  socket.js  types.ts  utils.js
dashboard/src2/: App.vue  globals.js  globals.ts  main.js  router.js  socket.js
dashboard/tests-e2e/: Dashboard.ts  auth.setup.ts  (+4 more)
debugging/: mariadb.Dockerfile  mariadb.build.Dockerfile  mariadb.build.md  mariadb.md
deployment/: common_site_config.json  nginx.conf  production.md  redis_cache.conf  supervisor.conf  wait-for-redis.sh
devbox-dockerfile/: Dockerfile  entrypoint.sh  readme.md  start.sh  supervisord.conf
docker/: .env_example  docker-compose.yml
docs/: index.md  order.yml
libs/: README.md
libs/fc_cli/: pyproject.toml  requirements.txt  session.json
libs/fc_cli/fc/: deploy.py  main.py  models.py  printer.py
libs/fc_cli/fc/authentication/: login.py  session.py
libs/fc_cli/fc/commands/: assets.py  auth.py  deploy.py  server.py  servers.py  sites.py  utils.py
libs/mariadb_binlog_indexer/: .gitignore  README.md  build.sh  build_helper.sh  pyproject.toml  setup.py
libs/mariadb_binlog_indexer/indexer/: go.mod  go.sum  indexer.go  main.go  sql_metadata.go  utils.go
libs/mariadb_binlog_indexer/mariadb_binlog_indexer/: indexer.py
libs/mariadb_table_usage/: .gitignore  README.md  build.Dockerfile  build.sh  build_helper.sh  pyproject.toml  setup.py
libs/mariadb_table_usage/mariadb_table_usage/: __init__.py
libs/mariadb_table_usage/mariadb_table_usage_go/: .gitignore  go.mod  innodb_defs.go  innodb_parser.go  main.go  monitor.go  myisam_parser.go  parser_interface.go  utils.go
marketplace/: .prettierrc.json  gridsome.config.js  gridsome.server.js  package.json  tailwind.config.js
press/: __init__.py  agent.py  auth.py  bootstrap.py  commands.py  exceptions.py  hooks.py  install.py  metrics.py  modules.txt  notifications.py  overrides.py  patches.txt  ruff.toml  run_tests_local.py  runner.py  sanity.py  signup_e2e.py  telegram.py  telegram_utils.py  utils.py  wazuh.py
testing/: README.md  http_load_test.py  load_test.py
(+5122 files in other folders)
