[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "press"
dynamic = ["version"]
description = "Managed Frappe Hosting"
authors = [
    {name = "Frappe", email = "aditya@erpnext.com"}
]
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ansible==11.13.0",
    "beautifulsoup4",
    "boto3==1.39.14",
    "Click",
    "coverage",
    "dnspython==1.16.0",
    "docker==6.1.2",
    "dockerfile==3.2.0",
    "oci==2.116.0",
    "paramiko==3.3.1",
    "pexpect==4.8.0",
    "posthog==3.0.1",
    "prometheus-client==0.19.0",
    "PyGithub==1.44.1",
    "pyOpenSSL~=23.2.0",
    "python-telegram-bot==22.6",
    "razorpay~=2.0.0",
    "requests<2.32",
    "responses==0.23.1",
    "selenium==4.23.1",
    "semantic-version==2.10.0",
    "sql_metadata==2.10.0",
    "standard-imghdr==3.13.0", # Needed for ansible, imghdr was removed from standard library
    "stripe~=3.1.0",
    "tldextract==3.4.4",
    "tomli==2.0.1",
    "tqdm==4.66.3",
    "twilio==8.10.3",
    "wrapt~=1.15.0",
    "elasticsearch-dsl>=8.0.0,<9.0.0",
    "hcloud==2.2.1",
    "playwright==1.58.0", # Anything >=1.50.0 works
    "prometheus-api-client==0.6.0",
    "pydo==0.24.0",
]

[project.scripts]
backbone = "backbone.cli:cli"

[tool.setuptools]
packages = ["press"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "press.__version__"}
