[build-system]
requires = ["setuptools~=81.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "press"
dynamic = ["version"]
description = "Managed Frappe Hosting"
authors = [
    {name = "Frappe", email = "aditya@erpnext.com"}
]
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ansible==3.4.0",
    "beautifulsoup4",
    "boto3==1.39.14",
    "Click",
    "coverage",
    "dnspython==1.16.0",
    "docker==6.1.2",
    "dockerfile==3.2.0",
    "oci==2.180.0",
    "paramiko==3.3.1",
    "pexpect==4.8.0",
    "posthog==3.0.1",
    "prometheus-client==0.19.0",
    "PyGithub==1.44.1",
    "pyOpenSSL~=23.2.0",
    "python-telegram-bot==13.15",
    "razorpay>=1.3.0",
    "requests<2.32",
    "responses==0.23.1",
    "selenium==4.23.1",
    "semantic-version==2.10.0",
    "sql_metadata==2.10.0",
    "stripe~=2.56.0",
    "tldextract==3.4.4",
    "tomli==2.0.1",
    "tqdm==4.66.3",
    "twilio==8.10.3",
    "wrapt~=1.15.0",
    "elasticsearch-dsl>=8.0.0,<9.0.0",
    "hcloud==2.2.1",
    "playwright==1.49.1",
    "prometheus-api-client==0.6.0",
    "pydo==0.24.0",
    "semgrep==1.159.0",
    "frappe-mcp @ git+https://github.com/frappe/mcp",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff==0.14.2",
    "mypy==1.18.2",
    "ipdb==0.13.13",
    "setuptools~=81.0",
    # typechecking
    "types-requests<2.32",
    "types-pytz~=2025.2",
    "types-python-dateutil~=2.9.0",
    "types-boto3==1.39.14",
    "types-jwt==0.1.3",
    "types-setuptools~=81.0",
    "types-stripe~=3.5.2",
    "types-oauthlib~=3.3",
    "types-passlib~=1.7",
]

[project.scripts]
backbone = "backbone.cli:cli"

[tool.setuptools]
packages = ["press"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "press.__version__"}

[tool.bench.dev-dependencies]
cryptography = "~=45.0" # cap below 46 which drops the GEN_EMAIL binding pyOpenSSL reads at import
"moto[all]" = "~=5.0"
Werkzeug = "==3.1.3" # has to be manually kept same as framework since moto has a loose dependency
Faker = "==23.2.0"
freezegun = "==1.2.2"
